--- a/login.html
+++ b/login.html
@@ -34,10 +34,6 @@
               <label for="passwordLogin" class="form-label">Contraseña</label>
               <input type="password" class="form-control" id="passwordLogin" required />
             </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="recuerdame" />
-              <label class="form-check-label" for="recuerdame">Recuérdame</label>
-            </div>
             <button type="submit" class="btn btn-primary w-100">Iniciar sesión</button>
             <div class="text-center mt-3">
               <a href="./index.html">¿No tienes una cuenta? Regístrate</a>
@@ -69,6 +65,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="./controladorreingreso.js"></script>
 </body>
 
 </html>
