--- a/competitividad.html
+++ b/competitividad.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link rel="stylesheet" href="./estilos.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -93,16 +94,34 @@
 
       <div class="row my-3">
         <div class="col-12 col-md-6">
-          
+
           <canvas id="graficoRadar"></canvas>
 
         </div>
         <div class="col-12 col-md-6">
-         
+
           <canvas id="graficoBarras"></canvas>
         </div>
       </div>
     </section>
+
+    <section class="container">
+      <div class="row">
+        <div class="col-12">
+          <hr>
+          <div class="row my-4">
+            <div class="col-12 text-center">
+              <button id="botonDescargarPDF" class="btn btn-primary">
+                Descargar reporte en PDF
+                <i class="bi bi-download"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
 
   </main>
 
@@ -110,10 +129,12 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script type="module" src="./controaldorgraficasUno.js"></script>
   <script type="module" src="./controladorlogout.js"></script>
+  <script type="module" src="./controladorreporte.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 
 </html>
