--- a/competitividad.html
+++ b/competitividad.html
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="col-12 col-md-12">
 
-          <h3>Resultados Contabilidad y Finanzas</h3>
+          <h3>Resultados del analisis: </h3>
 
           <table class="table table-bordered" id="tablaSubcategorias">
             <thead>
