--- a/resultados.html
+++ b/resultados.html
@@ -147,6 +147,24 @@
            </div>
         </section>
 
+        <section class="container my-5" id="interpretacion-ia">
+        <h3 class="mb-3">Interpretado por “IA” 🧠</h3>
+        <p class="text-muted">
+          Con base en los puntajes de las áreas, se genera una retroalimentación automática.
+        </p>
+        <button id="btnInterpretar" class="btn btn-primary btn-sm mb-3">Generar interpretación</button>
+
+        <div class="card d-none" id="resultadoIA">
+          <div class="card-body">
+            <h5 class="card-title">Resumen</h5>
+            <p id="iaResumen"></p>
+
+            <h6>Oportunidades de mejora</h6>
+            <ul id="iaMejoras" class="mb-0"></ul>
+          </div>
+        </div>
+      </section>
+
     </main>
 
 
