--- a/competitividad.html
+++ b/competitividad.html
@@ -105,6 +105,31 @@
       </div>
     </section>
 
+        <section class="container my-5" id="ia-section">
+      <h3 class="mb-3">Lo que dice la IA 🧠</h3>
+      <p class="text-muted">
+        La IA tomará los resultados que acabas de diligenciar, los comparará entre las distintas áreas y generará una lectura ejecutiva en lenguaje sencillo: qué estás haciendo bien, qué está quedando corto y por dónde conviene empezar a mejorar. Úsalo para tener en segundos lo que normalmente haría un consultor.
+      </p>
+
+      <div class="mb-3">
+        <button id="btnIA" class="btn btn-primary btn-sm">
+          Interpretar con IA
+        </button>
+        <small class="text-muted ms-2" id="iaStatus"></small>
+      </div>
+
+      <div class="card d-none" id="iaCard">
+        <div class="card-body">
+          <h5 class="card-title">Resumen</h5>
+          <p id="iaResumen"></p>
+
+          <h6>Oportunidades clave</h6>
+          <ul id="iaOportunidades"></ul>
+        </div>
+      </div>
+    </section>
+
+
     <section class="container">
       <div class="row">
         <div class="col-12">
@@ -131,6 +156,8 @@
   <script type="module" src="./controladorlogout.js"></script>
   <script type="module" src="./controladorreporte.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+ <script type="module" src="./ia.js"></script>
+</script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
